fix catalog sidebar on small screen

--- a/owen_agriculture/static/css/base_style.css
+++ b/owen_agriculture/static/css/base_style.css
@@ -74,7 +74,6 @@
   	vertical-align: middle;
   	line-height: normal; 
   	padding: 0;
-  	padding-right: 4px; 
   	margin: 0;
 }
 
